# assignment-8-simon-og-magnus

./: queuestacktest
Stacklibrary opg4/: CMakeLists.txt  Makefile
Stacklibrary opg4/include/: stack.h
Stacklibrary opg4/src/: stack.c
